# tgcp

./: CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: pr-check.yml  release.yml
src/: app.rs  config.rs  main.rs
src/gcp/: auth.rs  client.rs  dispatch.rs  mod.rs
src/resource/: registry.rs
src/resources/: apigateway.json  appengine.json  artifactregistry.json  bigquery.json  cloudbuild.json  cloudrun.json  cloudsql.json  common.json  composer.json  compute.json  dataflow.json  dataproc.json  dns.json  endpoints.json  filestore.json  functions.json  gke.json  iam.json  kms.json  loadbalancing.json  logging.json  memorystore.json  monitoring.json  pubsub.json  scheduler.json  secretmanager.json  servicedirectory.json  spanner.json  storage.json  tasks.json  vpc.json  workflows.json
src/ui/: command_box.rs  dialog.rs  header.rs  help.rs  mod.rs  projects.rs  splash.rs  zones.rs
