[package]
name = "tgcp"
version = "1.0.1"
edition = "2021"
description = "Terminal UI for GCP - navigate, observe, and manage GCP resources"
license = "MIT"
repository = "https://github.com/huseyinbabal/tgcp"
homepage = "https://github.com/huseyinbabal/tgcp"
readme = "README.md"
keywords = ["gcp", "tui", "terminal", "cloud", "infrastructure"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Huseyin Babal"]

[dependencies]
# TUI
ratatui = "0.30"
crossterm = "0.29"

# HTTP Client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
url = "2.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Utils
anyhow = "1.0"
thiserror = "2.0"
dirs = "6.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
open = "5.0"

# Auth (JWT signing for service accounts)
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
base64 = "0.22"

[profile.release]
codegen-units = 1  # Allows compiler to perform better optimization
lto = true         # Enables Link-time Optimization
opt-level = "s"    # Prioritizes small binary size with good performance
strip = true       # Ensures debug symbols are removed
